--- a/backjoonhelper__front/front/src/components/SolList.module.css
+++ b/backjoonhelper__front/front/src/components/SolList.module.css
@@ -2,5 +2,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 20vh;
+  margin-top: 8vh;
+}
+
+.addBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 4mm ridge rgba(211, 220, 50, 0.6);
+  border-radius: 30px;
+  width: 50vw;
+  height: 10vh;
+  margin: 10vh auto 0 auto;
+  background-color: yellow;
 }
